fixed history visit not showing tasks correctly

--- a/src/app/modules/main/main-dashboard/patient-view/patient-card/patient-card.component.scss
+++ b/src/app/modules/main/main-dashboard/patient-view/patient-card/patient-card.component.scss
@@ -1,6 +1,5 @@
 .patients {
   display: block;
-
   background-color: #f0dbd87c;
   border: none;
   &:hover {
@@ -11,7 +10,8 @@
 
 .add {
   display: block;
-
+  height: 11rem;
+  border: none;
   background-color: #d1e0d39f;
   &:hover {
     background-color: #e5f0e6;
